<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/browse_activity_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/background_gradient"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_activity_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/browse_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            tools:context=".activity_new.ActivityEditRecipe">

            <EditText
                android:id="@+id/edit_activity_editText_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/my_border"
                android:ems="10"
                android:focusedByDefault="false"
                android:hint="@string/edit_activity_editText_name_hint"
                android:inputType="textAutoCorrect|textPersonName"
                android:padding="5dp"
                android:text="@string/WBL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_activity_save_button" />

            <EditText
                android:id="@+id/edit_activity_editText_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/my_border"
                android:breakStrategy="simple"
                android:focusedByDefault="false"
                android:gravity="top|start"
                android:hint="@string/edit_activity_editText_description_hint"
                android:inputType="textAutoCorrect|textMultiLine"
                android:padding="5dp"
                android:text="@string/WBL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_activity_editText_name" />

            <Button
                android:id="@+id/edit_activity_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_activity_bttn_save"
                app:layout_constraintStart_toStartOf="@+id/edit_activity_editText_name"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_activity_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WORD_DELETE"
                app:layout_constraintEnd_toEndOf="@+id/edit_activity_editText_name"
                app:layout_constraintTop_toTopOf="@+id/edit_activity_save_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    
</androidx.constraintlayout.widget.ConstraintLayout>

