<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".fragments.Fragment_calendar">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/calendar_tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/item_calendar_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/calendar_tabItem_main"
            android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/item_calendar_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_tabItem_exercise" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/item_calendar_meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_tabItem_meals" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_tabLayout"
        android:id="@+id/calendar_viewPager"/>


</androidx.constraintlayout.widget.ConstraintLayout>